--- a/PassingScoreAPI/pom.xml
+++ b/PassingScoreAPI/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
  
-  <groupId>ca.vanier.Calculator</groupId>
-  <artifactId>Calculator</artifactId>
+  <groupId>ca.vanier.scores</groupId>
+  <artifactId>scores</artifactId>
   <version>1.0-SNAPSHOT</version>
  
   <properties>
-    <maven.compiler.source>18</maven.compiler.source>
-    <maven.compiler.target>18</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
  
   <dependencies>
